--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@ Date: 2022.05.26
 Github: https://github.com/david587/
 Licenc: GNU GPL
 -->
-<h2>A testtömegindex számítást</h2>
+<h2>A testtömegindex számítás</h2>
 
 <form action="calc.php" method="get">
     <div>
