--- a/templates/calc.html
+++ b/templates/calc.html
@@ -13,4 +13,4 @@ Licenc: GNU GPL
 <div class="one"><P>A testömeg indexe:</P></div> 
 <div class="two"><p>{{ result }}</p></div>
 </div>
-<p class="notification">Megjegyzés: Figyelem! Ez a számítás nem veszi figyelembe a testmagasságot, ezért nem ad jó eredményt. Alacsonyabb embereknél soványságot, magasabb embereknél testsúlyfelesleget mutathat.</p>
+<p class="notification">Megjegyzés: A normális testtömegindex 18 és 24 közötti szám.</p>
