--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,9 @@ Licenc: GNU GPL
         <label for="testmagassag" class="form-label">Testmagasság</label>
         <input type="text" name="testmagassag" id="testmagassag"  class="form-control" placeholder="m">
     </div>
-    <p class="notification">Megjegyzés: A normális testtömegindex 18 és 24 közötti szám.</p>
+
+    <p class="notification">Megjegyzés: Figyelem! Ez a számítás nem veszi figyelembe a testmagasságot, ezért nem ad jó eredményt. Alacsonyabb embereknél soványságot, magasabb embereknél testsúlyfelesleget mutathat.</p>
+    
    
     <button type="submit"
     class="btn btn-warning mt-3">Számit</button><!--mert nem javascripttel kérjük el-->
