--- a/templates/head.html
+++ b/templates/head.html
@@ -32,6 +32,6 @@ Licenc: GNU GPL
             </li>
           </ul>
         <h1 class="underline">Feladat 0323</h1>
-        <h1>Baráth Dávid, SZoft 1 N, 2022-05-26</h1>
+        <h1>Baráth Dávid, Szoft 1 N, 2022-05-26</h1>
 
 
