--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,8 @@ Date: 2022.05.26
 Github: https://github.com/david587/
 Licenc: GNU GPL
 -->
-
+<div class="about">
 <p>Baráth Dávid</p>
 <p>2022.05.26</p>
 <p>Szoft/1/N</p>
+</div>
